[project]
name = "peony"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Patchethium", email = "asguftuikh@gmail.com" }
]
dependencies = [
    "torch==2.5.1+cpu",
    "torchaudio==2.5.1+cpu",
    "einops>=0.8.0",
    "omegaconf>=2.3.0",
    "matplotlib>=3.9.3",
    "descript-audio-codec>=1.0.0",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
